# TheSkepticJudge

./: .gitignore  README.md  add_users.py  agent_evaluator.py  embedding_utils.py  generate_evaluation_prompts.py  howtorun.md  learning_agent.py  load_config.py  mongodb_indexes.json  pyproject.toml  restaurant_agent.py  test_evaluation.py  update_collection_ids.py  update_embeddings.py  yelp_restaurant_agent.py
data/: distributed_systems_parsed_texts.json  judge_metaprompt.txt
data/evaluation_prompts/: learning_agent_prompts.json  restaurant_agent_prompts.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: AgentChat.js  EvaluationDashboard.js
